2002-09-30  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Updated for autoconf-2.54 and automake-1.7.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Generate libcob/cobconfig.h using AM_CONFIG_HEADER.
	Check db.h as well as db1/db.h.
	
2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Add check for regex.

2002-09-09  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (deb, rpm): Removed.

2002-09-06  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Check for db1 instead of db2/db3.

2002-09-05  Keisuke Nishida  <knishida@netlab.jp>

	* Use pkg-config scheme.
	* cob.pc.in: New file.
	* cob.m4, cob-config.in: Removed.
	* Makefile.am, configure.ac: Add cob.pc.  Remove cob-config and cob.m4.

2002-08-30  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac (AM_INIT_AUTOMAKE): Option `gnu' and `no-texinfo.tex'.
	(AC_FUNC_STAT, AC_HEADER_STAT): Removed.
	(LTLIBINTL): Used instead of LIBINTL.
	* Makefile.am (EXTRA_DIST): Don't include `redhat' and `debian'.

2002-08-28  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Use AC_LIBOBJ scheme.

2002-08-27  Keisuke Nishida  <knishida@netlab.jp>

	* HACKING: Use automake-1.6.3 and gettext-0.11.5.
	* configure.ac (COB_COBPP): Don't set path.
	(AM_GNU_GETTEXT_VERSION): Use gettext-0.11.5.
	(AC_CONFIG_AUX_DIR): Set to `config'.

2002-08-05  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac (LIBCOB_LIBS): Add $LIBINTL.

2002-08-02  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.9.7 released.

2002-07-30  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac (LIBCOB_LIBS): Set one by one.

2002-07-29  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac (COB_CONFIG_FILE): Use sysconfdir, not datadir.
	* Makefile.am (libcob.conf): Install into pkgconfdir, not pkgdatadir.

2002-07-01  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Checks for ncurses.

	* libcob.h: #include <libcob/screenio.h>

2002-06-18  Keisuke Nishida  <knishida@netlab.jp>
