@@ -20,7 +20,6 @@
 #ifndef COB_LIBCOB_H
 #define COB_LIBCOB_H
 
-#include <libcob/cobconfig.h>
 #include <libcob/call.h>
 #include <libcob/common.h>
 #include <libcob/fileio.h>
