@@ -6,10 +6,7 @@ libcob_la_LIBADD = $(LIBCOB_LIBS)
 libcob_la_LDFLAGS = -version-info 0:0:0
 
 pkgincludedir = $(includedir)/libcob
-pkginclude_HEADERS = cobconfig.h common.h move.h numeric.h \
+pkginclude_HEADERS = common.h move.h numeric.h \
 	termio.h fileio.h screenio.h strings.h call.h support.h
-
-EXTRA_DIST = cobconfig.h.in
-DISTCLEANFILES = cobconfig.h
 
 AM_CFLAGS = -Wall
