@@ -1,3 +1,7 @@
+2002-09-30  Keisuke Nishida  <knishida@netlab.jp>
+
+	* cobconfig.h.in: Removed.
+
 2002-09-29  Keisuke Nishida  <knishida@netlab.jp>
 
 	* fileio.h (cob_file): Restructured.
